# lola-os

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  QUICKSTART.md  README.md  go.mod  go.sum  lola.yaml.example  pyproject.toml  setup_v1_structure.sh
.github/workflows/: ci.yml
docs/: api_reference.md  architecture.md  changelog.md  concepts.md  configuration.md  index.md  integration_guide.md  quickstart.md  requirements.txt  roadmap.md
docs/diagrams/: architecture.mmd  utils_flow.mmd
docs/source/: conf.py  index.md  integration_guide.md
docs/tutorials/: first_agent.md  onchain_tools.md
examples/version_1/agents_combined/: .env.sample  README.md  agent.py  config.yaml
examples/version_1/agents_standalone/: README.md  agent.py  config.yaml
examples/version_1/chains_combined/: README.md  agent.py  config.yaml
examples/version_1/chains_standalone/: .env.sample  README.md  agent.py  config.yaml
examples/version_1/cli_standalone/: README.md
examples/version_1/core_combined/: README.md  agent.py  config.yaml
examples/version_1/core_standalone/: README.md  agent.py  config.yaml
internal/blockchain/: interface.go  interface_test.go
internal/config/: amount.go  config.go  env.go  interface.go  interface_test.go  loader.go  profiles.go  yaml.go
internal/core/: engine.go  engine_test.go  session.go
internal/observe/: audit.go  audit_test.go  interface.go  interface_test.go  logger.go  logger_test.go  metrics.go  metrics_test.go  noop.go  tracer.go  tracer_test.go
internal/security/: enforcer.go  enforcer_test.go  interface.go  interface_test.go
internal/tools/: interface.go  interface_test.go  registry.go  registry_test.go
python/lola/: __init__.py
sdk/: lola.go  options.go  runtime.go  tools.go
sdk/evm/: client.go
sdk/types/: chain.go  contract.go
templates/conversational/: .env.sample  README.md  agent.py  config.yaml
templates/plan_execute/: .env.sample  README.md  agent.py  config.yaml
templates/react/: .env.sample  README.md  agent.py
tests/: test_agents.py  test_chains.py  test_cli.py  test_core.py  test_libs.py  test_tools.py  test_utils.py
tests/integration/: test_full_workflow.py
(+141 files in other folders)
