[tool.poetry]
name = "lola-os"
version = "1.0.0"
description = "LOLA OS: Layered Orchestration for Logic and Automation - The Android OS for the On-Chain Agent Economy"
authors = ["Levi Chinecherem Chidi <levi@lolaos.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/0xSemantic/lola-os"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.0"
pyyaml = "^6.0.0"
pydantic = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
black = "^24.0.0"
ruff = "^0.5.0"