[tool.poetry]
name = "lola-os"
version = "1.0.0"
description = "LOLA OS: Layered Orchestration for Logic and Automation - V1 Core"
authors = ["Levi Chinecherem Chidi <lchinecherem2018@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/0xSemantic/lola-os"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
]
# <<< NEW SECTION – REQUIRED FOR `poetry install` >>>
packages = [{ include = "lola", from = "python" }]

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.0"
pyyaml = "^6.0.0"
pydantic = "^2.0.0"
langgraph = "^1.0.2"
litellm = "^1.45.2"
crawl4ai = "^0.3.7"
web3 = "^6.15.0"
eth-account = "^0.10.0"
click = "^8.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^5.0.0"
black = "^24.0.0"
ruff = "^0.14.3"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"